--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="paralax.css">
 </head>
 <body>
