--- a/index.html
+++ b/index.html
@@ -11,46 +11,48 @@
          */
 
         .parallax {
-          height: 100vh;
-          overflow-x: hidden;
-          overflow-y: auto;
-          perspective: 1px;
-        }
+            height: 500px; /* fallback for older browsers */
+            height: 100vh;
+            overflow-x: hidden;
+            overflow-y: auto;
 
-        .parallax__group {
+            perspective: 300px;
+          }
+
+          .parallax__group {
             position: relative;
             height: 500px; /* fallback for older browsers */
             height: 100vh;
             transform-style: preserve-3d;
-        }
+          }
 
-        .parallax__layer {
-          position: absolute;
-          top: 0;
-          right: 0;
-          bottom: 0;
-          left: 0;
-        }
+          .parallax__layer {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+          }
 
-        .parallax__layer--fore {
+          .parallax__layer--fore {
             transform: translateZ(90px) scale(.7);
             z-index: 1;
-        }
+          }
 
-        .parallax__layer--base {
+          .parallax__layer--base {
             transform: translateZ(0);
             z-index: 4;
-        }
+          }
 
-        .parallax__layer--back {
+          .parallax__layer--back {
             transform: translateZ(-300px) scale(2);
             z-index: 3;
-        }
+          }
 
-        .parallax__layer--deep {
+          .parallax__layer--deep {
             transform: translateZ(-600px) scale(3);
             z-index: 2;
-        }
+          }
 
         /* 
          * Page Rules
